err/spinnstoragehandlers.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SpiNNStorageHandlers-1!4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/SpiNNUtilities-1!4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spinn_storage_handlers'...
Listing './lib/python3.5/site-packages/spinn_storage_handlers/abstract_classes'...
Listing './lib/python3.5/site-packages/spinn_utilities'...
Compiling './lib/python3.5/site-packages/spinn_utilities/conf_loader.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/conf_loader.py", line 68
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spinn_utilities/configs'...
Compiling './lib/python3.5/site-packages/spinn_utilities/helpful_functions.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/helpful_functions.py", line 20
    return dict(map(lambda (name, router): (terminator.sub('', name), router),
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spinn_utilities/package_loader.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/package_loader.py", line 25
    print "Deleting: " + full_path
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spinn_utilities/testing'...
Compiling './lib/python3.5/site-packages/spinn_utilities/testing/log_checker.py'...
***   File "./lib/python3.5/site-packages/spinn_utilities/testing/log_checker.py", line 7
    print record
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
